Observer implementado para usuarios y competidores